third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/add/unknown_field_attribute.rs
#[derive(derive_more::Add)]
struct Foo(#[add(unknown)] i32);

#[derive(derive_more::Add)]
enum Enum {
    Bar { #[add(unknown)] i: i32 },
}

fn main() {}
